# RemoteHDT

./: .gitignore  Cargo.toml  Dockerfile  README.md  test.sh
.github/workflows/: artifacts.yml  ci.yml
benches/lubm/: main.rs
examples/: bench.rs  chunk_bench.rs  get_predicate.rs  http_bench.rs  import.rs  load_bench.rs  metadata_bench.rs  metadata_load.rs  metadata_serialize.rs  parse_bench.rs  query_bench.rs  serialize.rs  serialize_bench.rs
examples/ntriples/: main.rs
examples/paper/: main.rs  rdf.nt
examples/rdf_xml/: main.rs  rdf.rdf
examples/turtle/: main.rs  rdf.ttl
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
rdf-rs/: Cargo.toml
rdf-rs/src/: lib.rs  ntriples.rs  rdf_xml.rs  turtle.rs
resources/: metadata_coordinates.csv
resources/root.zarr/group/RemoteHDT/: zarr.json
resources/root.zarr/group/RemoteHDT/c/0/: 0
resources/root.zarr/group/RemoteHDT/c/1/: 0
resources/root.zarr/group/RemoteHDT/c/15/: 0
resources/root.zarr/group/RemoteHDT/c/2/: 0
resources/root.zarr/group/RemoteHDT/c/3/: 0
resources/root.zarr/group/RemoteHDT/c/5/: 0
resources/root.zarr/group/RemoteHDT/c/7/: 0
src/: dictionary.rs  error.rs  lib.rs  main.rs  reference_system.rs  remote_hdt.rs  utils.rs
src/engine/: array.rs  array_engine.rs  chunk.rs  chunk_engine.rs  mod.rs
src/io/: mod.rs  ntriples.rs  rdf_xml.rs  turtle.rs
src/metadata/: mod.rs  params.rs
src/metadata/structure/: coordinates.rs  mod.rs
src/storage/: dictionary.rs  layout.rs  matrix.rs  mod.rs  ops.rs  params.rs  tabular.rs  utils.rs
src/storage/layout/: matrix.rs  metadata.rs  mod.rs  tabular.rs
tests/: get_object_test.rs  get_predicate_test.rs  get_subject_test.rs  orientation.rs  write_read_test.rs
tests/common/: mod.rs
