[package]
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
name = "remote-hdt"
version = "0.0.1"
edition = "2021"

[dependencies]
zarrs = { git = "https://github.com/LDeakin/zarrs.git", default-features = false, features = [ "http", "gzip", "sharding" ] }
rdf-rs = { path = "./rdf-rs" }
clap = { version = "4.1.8", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
fcsd = "0.2.0"
rayon = "1.8.0"
sprs = "0.11.1"
proc_macros = { path = "proc_macros" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "thin"