[package]
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
name = "remote-hdt"
version = "0.0.1"
edition = "2021"

[dependencies]
zarrs = { git = "https://github.com/LDeakin/zarrs.git", default-features = false, features = [ "http", "gzip", "sharding" ] }
clap = { version = "4.1.8", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
fcsd = "0.2.0"
sprs = "0.11.1"
oxigraph = "0.3.20"
safe-transmute = "0.11.2"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"