[package]
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
name = "remote-hdt"
version = "0.0.1"
edition = "2021"

[dependencies]
zarrs = { version = "0.11.6", default-features = false, features = [ "http", "gzip", "sharding", "opendal", "async", "ndarray" ] }
clap = { version = "4.1.8", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
fcsd = "0.2.0"
sprs = "0.11.1"
rio_turtle = "0.8.4"
rio_xml = "0.8.4"
rio_api = "0.8.4"
rayon = "1.8.0"
parking_lot = "0.12"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"